[gd_scene load_steps=3 format=3 uid="uid://b1o7737q1g7km"]

[ext_resource type="Script" path="res://scripts/manager.gd" id="1_03rm6"]
[ext_resource type="Script" path="res://scripts/sql.gd" id="2_8nluc"]

[node name="Save_sql" type="Node2D"]

[node name="Manager" type="Node2D" parent="."]
script = ExtResource("1_03rm6")

[node name="Save" type="Node2D" parent="."]
visible = false

[node name="SQL" type="Node2D" parent="."]
script = ExtResource("2_8nluc")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.375
anchor_right = 0.628
offset_left = -3.05176e-05
offset_right = -0.456055
offset_bottom = 99.0
theme_override_font_sizes/font_size = 72
text = "Placares"

[node name="Score" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.163
anchor_top = 0.171
anchor_right = 0.836
anchor_bottom = 0.711
offset_left = -1.776
offset_top = 0.192001
offset_right = -0.0720215
offset_bottom = 0.271973
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1
clip_text = true

[node name="TextEdit" type="LineEdit" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.244
anchor_top = 0.744
anchor_right = 0.765
anchor_bottom = 0.852
offset_left = -0.0880127
offset_top = -0.112
offset_right = -0.280029
offset_bottom = -0.0960083
theme_override_font_sizes/font_size = 24
placeholder_text = "Insert score"

[node name="GridContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.11
anchor_top = 0.889
anchor_right = 0.913
anchor_bottom = 0.978
offset_left = 0.279991
offset_top = -0.0720215
offset_right = 0.223999
offset_bottom = 0.255981
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Save" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="Load" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Load"

[node name="Erase" type="Button" parent="CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Erase"

[connection signal="text_submitted" from="CanvasLayer/TextEdit" to="Manager" method="_on_text_edit_text_submitted"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Save" to="Manager" method="_on_save_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Load" to="Manager" method="_on_load_pressed"]
